Fixed header width, mobile menu slideover, increased burger button size, tweaked BlockRichText spacing.

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -34,7 +34,10 @@
 
 @layer utilities {
   .maxed {
-    @apply max-w-5xl mx-auto px-4 sm:px-12;
+    @apply sm:max-w-5xl sm:mx-auto;
+  }
+  .padded {
+    @apply px-6 sm:px-12;
   }
 }
 
